--- a/PZ-WEB-main/PZ-WEB-main/pages/el-juego-subpages/aprende-a-sobrevivir.html
+++ b/PZ-WEB-main/PZ-WEB-main/pages/el-juego-subpages/aprende-a-sobrevivir.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="../../styles/aprende-a-sobrevivir.css">
-    <link rel="stylesheet" href="../../styles/header.css">
+    <link rel="stylesheet" href="../../styles/header.css"
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -16,34 +16,53 @@
 <body>
 
     <div class="pz-big-logo">
-        <img class="pz-big-logo-image" src="media/pz-big-logo.webp">
+        <img class="pz-big-logo-image" src="../../media/pz-big-logo.png">
 
 
     </div>
 
     <div class="header">
         <ul class="menu-list">
-
-            <li class="menu-links">
-                <a href="index.html">HOME</a>
-            </li>
-            <li class="menu-links">
-                <a href="https://map.projectzomboid.com/">MAPA</a>
-            </li>
-            <li class="menu-links"> 
-                <a href="pages/el-juego.html">JUEGO</a>
-            </li>
-            <li class="menu-links"> 
-                <a href="pages/localizaciones.html">LOCALIZACIONES</a>
-            </li>
-            <li class="menu-links">
-                <a href="pages/noticias.html">NOTICIAS</a>
-            </li>
-            <li class="menu-links">
-                <a href="pages/soporte.html">SOPORTE</a>
-            </li>
+  
+              <div class="Menu-slot">
+                 <img class="blood-image" src="../../media/blod sin fondo.png">
+                 <a class="menu-links" href="../../index.html">HOME</a>
+             </div>
+  
+              <div class="Menu-slot">
+                 <img class="blood-image" src="../../media/blod sin fondo.png">
+                  <a class="menu-links" href="https://map.projectzomboid.com/">MAPA</a>
+              </div>
+  
+              <div class="Menu-slot">
+                 <img class="blood-image" src="../../media/blod sin fondo.png">
+                  <a class="menu-links" href="../../pages/el-juego.html">JUEGO</a>
+              </div>
+  
+              <div class="Menu-slot">
+                 <img class="blood-image blood-loc" src="../../media/blod sin fondo.png">
+                  <a class="menu-links" href="../../pages/localizaciones.html">LOCALIZACIONES</a>
+              </div>
+  
+              <div class="Menu-slot">
+                 <img class="blood-image" src="../../media/blod sin fondo.png">
+                  <a class="menu-links" href="pages/noticias.html">NOTICIAS</a>
+              </div>
+  
+              <div class="Menu-slot">
+                 <img class="blood-image" src="../../media/blod sin fondo.png">
+                  <a class="menu-links" href="../../pages/soporte.html">SOPORTE</a>
+              </div>
         </ul>
-    </div>
+     </div>
+
+     <div class="titulo texto-titulo">
+        <p>APRENDE A SOBREVIVIR</p>
+
+     </div>
+
+
+
     
     <div class="tabla-tips">
         
@@ -51,6 +70,9 @@
             <p class="titulo-tip">PERSONAJE</p>
             <img class="personaje-img" 
             src="../../media/maxresdefault.png">
+            <div class="texto-tip">
+                <p class="texto">La creación de personajes es uno de los aspectos más importantes al comenzar tu juego, y aprender a crear uno bien equilibrado puede ser difícil, especialmente cuando tienes muy poca experiencia.</p>
+             </div>
 
         </div>
 
@@ -58,34 +80,55 @@
             <p class="titulo-tip">COMBATE</p>
             <img class="personaje-img" 
             src="../../media/combat.png">
+            <div class="texto-tip">
+                <p class="texto"><div class="texto-tip">
+                <p class="texto">
+
+                    Miles de zeds 'adecuados' deambulan por las calles. Los disparos y el combate podrían conducir a una mordedura...</p>
+             </div></p>
+             </div>
 
         </div>
 
         <div class="tip">
             <p class="titulo-tip">SOBREVIVE</p>
             <img class="personaje-img" 
-            src="../../media/maxresdefault.png">
+            src="../../media/Sin título-1.png">
+            <div class="texto-tip">
+                <p class="texto">Busca comida, crea artículos y construye edificios y defensas en tu lucha contra la muerte inevitable.</p>
+             </div>
 
         </div>
 
         <div class="tip">
-            <p class="titulo-tip">MULTIJUGADOR</p>
+            <p class="titulo-tip">CONSTRUCCIÓN</p>
             <img class="personaje-img" 
-            src="../../media/maxresdefault.png">
+            src="../../media/construcción.png">
+            <div class="texto-tip">
+                <p class="texto">Si quieres sobrevivir en Project Zomboid, necesitarás una base. Mucho más que un lugar al que llamar hogar, las bases proporcionan espacio de almacenamiento para tus bienes almacenados y seguridad contra el mal tiempo y las hordas pasajeras.</p>
+             </div>
 
         </div>
 
         <div class="tip">
             <p class="titulo-tip">EXPLORACIÓN</p>
             <img class="personaje-img" 
-            src="../../media/maxresdefault.png">
+            src="../../media/exploración.png">
+            <div class="texto-tip">
+                <p class="texto">
+
+                    Explora las ciudades isométricas de Kentucky en nuestro vasto mapa en crecimiento. ¿Dónde harás tu base ?</p>
+             </div>
 
         </div>
 
         <div class="tip">
             <p class="titulo-tip">SOPORTE DE MODS</p>
             <img class="personaje-img" 
-            src="../../media/maxresdefault.png">
+            src="../../media/mods.png">
+            <div class="texto-tip">
+                <p class="texto">Potente compatibilidad con mods de Lua, con mapas y herramientas de desarrollo disponibles para la comunidad.</p>
+             </div>
 
         </div>
     </div>
