--- a/PZ-WEB-main/PZ-WEB-main/pages/el-juego-subpages/aprende-a-sobrevivir.html
+++ b/PZ-WEB-main/PZ-WEB-main/pages/el-juego-subpages/aprende-a-sobrevivir.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="../../styles/aprende-a-sobrevivir.css">
-    <link rel="stylesheet" href="../../styles/header.css"
+    <link rel="stylesheet" href="../../styles/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -93,7 +93,7 @@
         <div class="tip">
             <p class="titulo-tip">SOBREVIVE</p>
             <img class="personaje-img" 
-            src="../../media/Sin título-1.png">
+            src="../../media/Sin título-1.png">
             <div class="texto-tip">
                 <p class="texto">Busca comida, crea artículos y construye edificios y defensas en tu lucha contra la muerte inevitable.</p>
              </div>
@@ -103,7 +103,7 @@
         <div class="tip">
             <p class="titulo-tip">CONSTRUCCIÓN</p>
             <img class="personaje-img" 
-            src="../../media/construcción.png">
+            src="../../media/construcción.png">
             <div class="texto-tip">
                 <p class="texto">Si quieres sobrevivir en Project Zomboid, necesitarás una base. Mucho más que un lugar al que llamar hogar, las bases proporcionan espacio de almacenamiento para tus bienes almacenados y seguridad contra el mal tiempo y las hordas pasajeras.</p>
              </div>
@@ -113,7 +113,7 @@
         <div class="tip">
             <p class="titulo-tip">EXPLORACIÓN</p>
             <img class="personaje-img" 
-            src="../../media/exploración.png">
+            src="../../media/exploración.png">
             <div class="texto-tip">
                 <p class="texto">
 
